# identity

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  t.html
.github/workflows/: linux.yml
assets/: login.html
config/: default.toml
frontend/: authorize.html  index.html  index.js  main.css  package-lock.json  package.json  signin.html  signup.html  webpack.config.js
identity-cli/: Cargo.toml
identity-cli/src/: main.rs
migrations/2020-08-04-165420_users/: down.sql  up.sql
pow/: Cargo.toml
pow/src/: lib.rs
src/: cli.rs  data.rs  errors.rs  main.rs  routes.rs  schema.rs  settings.rs  test.rs
src/database/: mod.rs  pool.rs
src/oauth/: handlers.rs  mod.rs  state.rs
src/pow/: counter.rs  handler.rs  handlers.rs  levels.rs  mod.rs  payload.rs  routes.rs  utils.rs  verify.rs
src/test/: mod.rs  setup.rs
src/user_case_mapped/: enforce.rs  tables.rs
src/users/: handler.rs  handlers.rs  hashify.rs  mod.rs  models.rs  routes.rs  server.rs  signin.rs  signout.rs  signup.rs
src/users/authentication/: get_password.sql  handlers.rs  mod.rs  payload.rs  routes.rs
src/users/filters/: mod.rs
src/users/filters/blacklist/: enforce.rs  tables.rs
src/users/filters/profainity/: enforce.rs  mod.rs  tables.rs
src/users/filters/user_case_mapped/: enforce.rs  mod.rs  tables.rs
src/users/pow/: handler.rs  mod.rs  utils.rs
src/users/registration/: actions.rs  add_user.sql  handlers.rs  mod.rs  models.rs  payload.rs  routes.rs
src/users/user_case_mapped/: enforce.rs
src/users/utils/: hashify.rs  mod.rs  pow.rs  utils.rs
src/users/utils/filters/: mod.rs
src/users/utils/filters/blacklist/: enforce.rs  mod.rs  tables.rs
src/users/utils/filters/profainity/: enforce.rs  mod.rs  tables.rs
src/users/utils/filters/user_case_mapped/: enforce.rs  mod.rs  tables.rs
static/: index.html  tt.html
