[package]
name = "authentication"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-web-static-files = "2.0"
actix-http = "1.0.1"
actix-identity = "0.2.1"
env_logger = "0.7.1"
rand = "0.7.3"
serde = "1.0.114"
serde_derive = "1.0.114"
rust-argon2 = "0.8.2"
failure = "0.1.8"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
r2d2 = "0.8.9"
tokio = { version = "0.2", features = ["full"] }
config = "0.9"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
unicode-normalization = "0.1.13"
regex = "1.3.9"
