[package]
name = "identity"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ ".", "pow" ]

[[bin]]
name = "identity"
path = "src/main.rs"

[[bin]]
name = "test-setup"
path = "src/test/setup.rs"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-rt = "1"
actix-files = "0.4"
actix-http = "2"
actix-identity = "0.3"
actix-session = "0.4"
actix-service = "1.0.6"

pretty_env_logger = "0.4.0"
log = "0.4.11"

rand = "0.7.3"

rust-argon2 = "0.8.2"

serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1"

thiserror = "1.0"

uuid = { version = "0.8", features = ["serde", "v4"] }

config = "0.10"
lazy_static = "1.4.0"
num_cpus = "1.13.0"

unicode-normalization = "0.1.13"
regex = { version = "1.3.9", features = [ "perf-inline", "perf-dfa", "perf-literal", "perf-cache", "perf"]}

pow_sha256 = "0.2.1"

futures = "0.3"

validator = "0.12"
validator_derive = "0.12"

ammonia="3"

url = "2"

derive_more = "0.99"

tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
tokio-postgres = "0.5"
deadpool-postgres = "0.5"
deadpool = "0.5"

actix-redis = "0.9"
redis-async = "0.6"
